@@ -477,8 +477,14 @@ window wconvert {
 		tooltip "Select output directory"
 	}
 
+	label lsets {
+		position 0 40 300 15
+		text "Settings (click on the middle column to modify):"
+		style visible
+	}
+
 	listview vsets {
-		position 0 40 250 100
+		position 0 55 250 100
 		style edit_labels explorer_theme grid_lines visible
 
 		lclick CVT_SETS_EDIT
@@ -524,20 +530,32 @@ window wrec {
 		}
 	}
 
+	label lfn {
+		position 0 0 200 15
+		text "Output filename template:"
+		style visible
+	}
+
 	editbox eout {
-		position 0 0 200 25
+		position 0 15 200 25
 		style visible
 	}
 
 	button boutbrowse {
-		position 220 0 35 25
+		position 220 15 35 25
 		style visible
 		text "..."
 		action OUTBROWSE
 	}
 
+	label lsets {
+		position 0 40 300 15
+		text "Settings (click on the middle column to modify):"
+		style visible
+	}
+
 	listview vsets {
-		position 0 25 250 100
+		position 0 55 250 100
 		style edit_labels explorer_theme grid_lines visible
 
 		lclick CVT_SETS_EDIT
@@ -717,6 +735,7 @@ window wuri {
 	title "Add URL"
 	position 300 300 400 100
 	style popup
+	opacity 90
 	font {
 		name Arial
 		height 10
